Fit bg image to screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header-logo">THE HOLE</h1>
+        <h1 class="header-text-logo">THE HOLE</h1>
         <p class="header-text">Documentation site for anomalous village</p>
     </header>
 </body>
