--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header-text-logo">THE HOLE</h1>
-        <p class="header-text">Documentation site for anomalous village</p>
+        <h1 class="text-logo">THE HOLE</h1>
+        <p class="header-text">Documentation site for anomalous events found on abandoned village</p>
     </header>
 </body>
 </html>
