--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
     <header class="header">
         <h1 class="text-logo">THE HOLE</h1>
-        <p class="header-text">Documentation site for anomalous events found on abandoned village</p>
+        <p class="header-text">Documentation site for anomalous events observed on site 117</p>
     </header>
+    <div class="buttons">
+
+    </div>
+    <footer class="footer">
+        <p>Written by Doctor Don Ramon, MCB Organization.</p>
+    </footer>
 </body>
 </html>
