add eye icon in index page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="text-logo">THE HOLE</h1>
+        <h1 class="header-text-logo">THE HOLE</h1>
         <p class="header-text">Documentation site for anomalous events observed on site 117</p>
+        <div class="icon"></div>
     </header>
     <div class="buttons">
 
