--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header-text-logo">THE HOLE</h1>
-        <p class="header-text">Documentation site for anomalous events observed on site 117</p>
+        <div class="header-inner-text">
+            <h1 class="header-text-logo">THE HOLE</h1>
+            <p class="header-text">Documentation site for anomalous events observed on site 117</p>
+        </div>
         <div class="icon"></div>
     </header>
     <div class="buttons">
