add intro animation and decorative line

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-inner-text">
-            <h1 class="header-text-logo">THE HOLE</h1>
-            <p class="header-text">Documentation site for anomalous events observed on site 117</p>
+        <div class="header-inner">
+            <h1 class="header-logo">THE HOLE</h1>
+            <p class="header-paragraph">Documentation site for anomalous events observed on site 117</p>
         </div>
-        <div class="icon"></div>
+        <div class="header-icon"></div>
     </header>
     <div class="buttons">
 
