add button and button animations

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
             <h1 class="header-logo">THE HOLE</h1>
             <p class="header-paragraph">Documentation site for anomalous events observed on site 117</p>
         </div>
-        <div class="header-icon"></div>
+        <div class="buttons">
+            <input class="art-button" id="description" type="button" onclick="location.href='http://google.com';" value="Description"/>
+            <input class="art-button" id="report" type="button" onclick="location.href='http://google.com';" value="Report"/>
+            <input class="art-button" id="containment" type="button" onclick="location.href='http://google.com';" value="Containment"/>
+        </div>
+        <div class="header-icon"></div>   
     </header>
-    <div class="buttons">
 
-    </div>
     <footer class="footer">
         <p>Written by Doctor Don Ramon, MCB Organization.</p>
     </footer>
