hide elements when pressing article buttons

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 <body>
     <header class="header">
+            <div class="header-icon"></div>  
         <div class="header-inner">
             <h1 class="header-logo">THE HOLE</h1>
             <p class="header-paragraph">Documentation site for anomalous events observed on site 117</p>
         </div>
         <div class="buttons">
-            <input class="art-button" id="description" type="button" onclick="location.href='http://google.com';" value="Description"/>
-            <input class="art-button" id="report" type="button" onclick="location.href='http://google.com';" value="Report"/>
-            <input class="art-button" id="containment" type="button" onclick="location.href='http://google.com';" value="Containment"/>
-        </div>
-        <div class="header-icon"></div>   
+            <input class="art-button" id="description" type="button" value="Description"/>
+            <input class="art-button" id="report" type="button" value="Report"/>
+            <input class="art-button" id="containment" type="button" value="Containment"/>
+        </div>        
     </header>
 
     <footer class="footer">
         <p>Written by Doctor Don Ramon, MCB Organization.</p>
     </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
