some weird javascript shit, dont even ask me, also fixed the articles container stuff

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <div class="articles">
             <article class="article description">
-                <h2>Description</h1>
+                <h2>Description</h2>
+                <button class="close">X</button>
                 <span class="image">
                     <img src="assets/images/floating_block.png" alt="Image of a floating block thingy">
                 </span>              
@@ -38,7 +39,8 @@
                 </p>
             </article>
             <article class="article report">
-                <h2>Report</h1>
+                <h2>Report</h2>
+                <button class="close">X</button>
                 <span class="image">
                     <img src="assets/images/spawner_2.png" alt="Image of a spawn farm thingy">
                 </span>  
@@ -49,7 +51,8 @@
                 Sed a ornare urna, nec accumsan augue. Donec ullamcorper felis pretium, tincidunt metus id, ornare elit. Sed sed eros varius sapien tincidunt porttitor ut eget mi. In sagittis turpis ut purus ullamcorper, at aliquet augue sollicitudin. In eu laoreet mauris. Curabitur quis arcu a lorem laoreet fringilla. Maecenas posuere libero a tincidunt mollis. Curabitur tellus nulla, fermentum ullamcorper maximus quis, accumsan vel metus. Nunc volutpat leo et elit varius congue ac non libero. Phasellus id mattis nisl. Fusce id euismod est. Fusce eget cursus lorem.</p>
             </article>
             <article class="article containment">
-                <h2>Containment</h1>
+                <h2>Containment</h2>
+                <button class="close">X</button>
                 <span class="image">
                     <img src="assets/images/hole_2.png" alt="Image of a big hole in a mountain, probably haunted or something idk">
                 </span>
