add close button styling and animation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="articles">
             <article class="article description">
                 <h2>Description</h2>
-                <button class="close">X</button>
+                <button class="close"></button>
                 <span class="image">
                     <img src="assets/images/floating_block.png" alt="Image of a floating block thingy">
                 </span>              
